--- a/contact.html
+++ b/contact.html
@@ -172,8 +172,7 @@
                             <h5 class="text-white">Call Us</h5>
                             <p class="text-white"> Distributors &amp; Dealers :<br>
                                 <a href="tel:+918925848775" style="color: white;"> +91 8925848775</a><br>
-                               Isp &amp; Franchises : <a href="tel:+918925848771" style="color: white;">+91 8925848771</a><br>
-                              Support :<a href="tel:+918925848773" style="color: white;"> +91 8925848773 </a></p>
+                               Isp &amp; Franchises : <a href="tel:+918925848772" style="color: white;">+91 8925848772</a></p>
                         </div>
                     </div>
                 </div>
