--- a/dualband.html
+++ b/dualband.html
@@ -183,9 +183,9 @@
                                             <li class="mb-2"><span class="fa-li"><i class="fas fa-check green-text"></i></span><b>Uplink port</b>
                                                 :1*GPON /GEPON WAN port, SC/UPC Connectors or SC/APC connectors optional
                                             </li>
-                                            <li class="mb-2"><span class="fa-li"><i class="fas fa-check green-text"></i></span><b>Transmission distance</b>
+<!--                                             <li class="mb-2"><span class="fa-li"><i class="fas fa-check green-text"></i></span><b>Transmission distance</b>
                                                 : Up to 20Km
-                                            </li>
+                                            </li> -->
                                             <li class="mb-2"><span class="fa-li"><i class="fas fa-check green-text"></i></span><b>Downlink ports</b>
                                                 : 4*10/100/1000Base-Tx Gigabit Ethernet ports
                                             </li>
