--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
 
     .whatsapp h5 {
         color: white;
-        background: #20b20f;
+        background: #f1a71e;
         padding: 12px;
         border-radius: 60px;
     }
@@ -65,7 +65,7 @@
 
     .mail h5 {
         color: white;
-        background: #001d57;
+        background: #4c240e;
         padding: 14px;
         border-radius: 60px;
     }
@@ -125,6 +125,8 @@
                             </div>
                         </div>
                         <a href="about.html" class="nav-item nav-link">About</a>
+                        <a href="support.html" class="nav-item nav-link">Support</a>
+
                         <!-- <a href="contact.html" class="nav-item nav-link active">Contact</a> -->
                     </div>
                     <a href="contact.html" class="btn btn-dark py-2 px-4 d-none d-lg-inline-block">Contact Us</a>
@@ -316,6 +318,7 @@
                             <a href="index.html" aria-label="Read more">Home</a>
                             <a href="product.html" aria-label="Read more">Products</a>
                             <a href="about.html" aria-label="Read more">About</a>
+                            <a href="support.html" aria-label="Read more">Support</a>
                             <a href="contact.html" aria-label="Read more">Contact</a>
                         </div>
                     </div>
