--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     .whatsapp h5 {
         color: white;
-        background: #20b20f;
+        background: #f1a71e;
         padding: 12px;
         border-radius: 60px;
     }
@@ -66,7 +66,7 @@
 
     .mail h5 {
         color: white;
-        background: #001d57;
+        background: #4c240e;
         padding: 14px;
         border-radius: 60px;
     }
@@ -74,7 +74,7 @@
 
 <body>
     <div class="whatsapp">
-        <a href="https://api.whatsapp.com/send?phone=918925848773" target="_blank" aria-label="Read more">
+        <a href="https://api.whatsapp.com/send?phone=918925848772" target="_blank" aria-label="Read more">
             <h5>
                 <div class="myDIV">
                     <center><i class="fab fa-whatsapp fa-2x" aria-hidden="true"></i></center>
@@ -126,6 +126,7 @@
                             </div>
                         </div>
                         <a href="about.html" class="nav-item nav-link" aria-label="Read more">About</a>
+                        <a href="support.html" class="nav-item nav-link" aria-label="Read more">Support</a>
                         <!-- <a href="contact.html" class="nav-item nav-link">Contact</a> -->
                     </div>
                     <a href="contact.html" class="btn btn-dark py-2 px-4 d-none d-lg-inline-block" aria-label="Read more">Contact Us</a>
@@ -205,7 +206,7 @@
                
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <img class="img-fluid animated pulse infinite" src="img/img2.png" alt="dualband">
-                    <h3 class="text-center"><a href="dualband.html" style="color:#001d57" aria-label="Read more">Dualband Router</a></h3>
+                    <h3 class="text-center"><a href="dualband.html" style="color:#4c240e" aria-label="Read more">Dualband Router</a></h3>
                     <p style="color: white;font-size:large;font-weight: 500;align-items:center;
                     display:flex; justify-content:center;">
                         <img src="img/certified.png" style="width: 120px;" alt="certified">MTCTE Certified
@@ -375,6 +376,7 @@
                             <a href="index.html" aria-label="Read more">Home</a>
                             <a href="product.html" aria-label="Read more">Products</a>
                             <a href="about.html" aria-label="Read more">About</a>
+                            <a href="support.html" aria-label="Read more">Support</a>
                             <a href="contact.html" aria-label="Read more">Contact</a>
                         </div>
                     </div>
