--- a/singleband.html
+++ b/singleband.html
@@ -50,7 +50,7 @@
 
     .whatsapp h5 {
         color: white;
-        background: #20b20f;
+        background: #f1a71e;
         padding: 12px;
         border-radius: 60px;
     }
@@ -63,7 +63,7 @@
 
     .mail h5 {
         color: white;
-        background: #001d57;
+        background: #4c240e;
         padding: 14px;
         border-radius: 60px;
     }
@@ -71,7 +71,7 @@
 
 <body>
     <div class="whatsapp">
-        <a href="https://api.whatsapp.com/send?phone=918925848773" target="_blank" aria-label="Read more">
+        <a href="https://api.whatsapp.com/send?phone=918925848772" target="_blank" aria-label="Read more">
             <h5>
                 <div class="myDIV">
                     <center><i class="fab fa-whatsapp fa-2x" aria-hidden="true"></i></center>
@@ -123,6 +123,8 @@
                             </div>
                         </div>
                         <a href="about.html" class="nav-item nav-link" aria-label="Read more">About</a>
+                        <a href="support.html" class="nav-item nav-link">Support</a>
+
                         <!-- <a href="contact.html" class="nav-item nav-link">Contact</a> -->
                     </div>
                     <a href="contact.html" class="btn btn-dark py-2 px-4 d-none d-lg-inline-block" aria-label="Read more">Contact Us</a>
@@ -339,6 +341,7 @@
                             <a href="index.html" aria-label="Read more">Home</a>
                             <a href="product.html" aria-label="Read more">Products</a>
                             <a href="about.html" aria-label="Read more">About</a>
+                            <a href="support.html" aria-label="Read more">Support</a>
                             <a href="contact.html" aria-label="Read more">Contact</a>
                         </div>
                     </div>
