--- a/support.html
+++ b/support.html
@@ -3,22 +3,22 @@
 
 <head>
     <meta charset="utf-8">
-    <title>HomeFiber Contact Page</title>
+    <title>HomeFiber Support Page</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Homefiber, network, Router, Telfi technologies, Dualband Router, Singleband Router" name="keywords">
     <meta content="Homefiber is a leading provider of broadband ONT internet access solutions for Homes and Offices." name="description">
 
     <meta property="og:image" content="img/img2.png"/>
   
-    <meta property="og:title" content="Contact Us"/>
+    <meta property="og:title" content="Support"/>
   
     <meta property="og:description" content="Homefiber is a leading provider of broadband ONT internet access solutions for Homes and Offices."/>
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://homefiber.in/contact.html" />
+    <meta property="og:url" content="https://homefiber.in/support.html" />
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="img/small-logo.png">
     <link rel="alternate" hreflang="en" href="https://homefiber.in/" />
-    <link rel="canonical" href="https://homefiber.in/contact.html" />
+    <link rel="canonical" href="https://homefiber.in/support.html" />
 
 
     <!-- Google Web Fonts -->
