--- a/product.html
+++ b/product.html
@@ -295,7 +295,7 @@
                                 fetch(scriptURL, { method: 'POST', body: new FormData(form)})
                                 .then(response => alert("Thank you! your form is submitted successfully." ))
                                 .then(() => { 
-                                    window.open('https://allitson.com/trialhomefiber/productpdf/HF4AV4001-4.pdf','_blank');
+                                    window.open('https://www.homefiber.in/homefiberpdf.pdf','_blank');
                                     })
                                     .then(()=>
                                         window.reload()
