--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <img class="img-fluid animated pulse infinite" src="img/img4.png" alt="dualband">
-                    <h3 class="text-center"><a href="dualband.html" style="color:#4c240e" aria-label="Read more">Dualband Router</a></h3>
+                    <h3 class="text-center"><a href="dualband.html" style="color:#4c240e" aria-label="Read more">Dualband Router With Voice</a></h3>
                     <p style="color: white;font-size:large;font-weight: 500;align-items:center;
                     display:flex; justify-content:center;">
                         <img src="img/certified.png" style="width: 120px;" alt="certified">MTCTE Certified
@@ -214,7 +214,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <img class="img-fluid animated pulse infinite" src="img/img1.png" alt="singleband">
-                    <h3 class="text-center">Singleband Router</h3>
+                    <h3 class="text-center">Dualband Router Without Voice</h3>
                     <p style="color: white;font-size:large;font-weight: 500;align-items:center;
                     display:flex; justify-content:center;">
                         <img src="img/certified.png" style="width: 120px;" alt="certified">MTCTE Certificate awaited
