--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     <h3 class="text-center">Dualband Router Without Voice</h3>
                     <p style="color: white;font-size:large;font-weight: 500;align-items:center;
                     display:flex; justify-content:center;">
-                        <img src="img/certified.png" style="width: 120px;" alt="certified">MTCTE Certificate awaited
+                        <img src="img/certified.png" style="width: 120px;" alt="certified">MTCTE Certified
                     </p>
                 </div>
             </div>
