--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
         </a>
     </div>
     <div class="mail" style="padding-top: 30px;">
-        <a href="mailto:jrk@homefiber.in" aria-label="Read more">
+        <a href="mailto:sales@homefiber.in" aria-label="Read more">
             <h5>
                 <div >
                     <center><i class="fa fa-envelope" aria-hidden="true" style="font-size:30px;"></i></center>
@@ -183,7 +183,7 @@
                         <div class="border py-5 px-3">
                             <i class="fa fa-envelope fa-3x text-dark mb-4"></i>
                             <h5 class="text-white">Mail Us</h5>
-                            <p class="text-white"><a href="mailto:jrk@homefiber.in" style="color: white;">jrk@homefiber.in</a></p>
+                            <p class="text-white"><a href="mailto:sales@homefiber.in" style="color: white;">sales@homefiber.in</a></p>
                         </div>
                     </div>
                 </div>
