--- a/singleband.html
+++ b/singleband.html
@@ -296,8 +296,8 @@
                 
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.5s">
                     <h5 class="mb-4">Our Products</h5>
-                    <a class="btn btn-link" href="singleband.html" aria-label="Read more">Singleband Router</a>
-                    <a class="btn btn-link" href="dualband.html" aria-label="Read more">Dualband Router</a>
+                    <a class="btn btn-link" href="singleband.html" aria-label="Read more">Dualband Router Without Voice</a>
+                    <a class="btn btn-link" href="dualband.html" aria-label="Read more">Dualband Router With Voicer</a>
                    
                 </div>
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.3s">
