--- a/index.html
+++ b/index.html
@@ -214,7 +214,8 @@
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <img class="img-fluid animated pulse infinite" src="img/img11.png" alt="singleband">
-                    <h3 class="text-center">Dualband Router Without Voice</h3>
+                    <a href="singleband.html" style="color:#4c240e" aria-label="Read more">Dualband Router Without Voice</a>
+                   
                     <p style="color: white;font-size:large;font-weight: 500;align-items:center;
                     display:flex; justify-content:center;">
                         <img src="img/certified.png" style="width: 120px;" alt="certified">MTCTE Certified
