--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <img class="img-fluid animated pulse infinite" src="img/img11.png" alt="singleband">
-                    <a href="singleband.html" style="color:#4c240e" aria-label="Read more">Dualband Router Without Voice</a>
+                    <h3 class="text-center"><a href="singleband.html" style="color:#4c240e" aria-label="Read more">Dualband Router Without Voice</a></h3>
                    
                     <p style="color: white;font-size:large;font-weight: 500;align-items:center;
                     display:flex; justify-content:center;">
