--- a/about.html
+++ b/about.html
@@ -121,7 +121,8 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link " data-bs-toggle="dropdown" aria-label="Read more">Products</a>
                             <div class="dropdown-menu bg-light mt-2">
-                                <a href="product.html" class="dropdown-item">ONT</a>
+                                 <a href="dualband.html" class="dropdown-item" aria-label="Read more">Dualband Router With Voice</a>
+                                 <a href="singleband.html" class="dropdown-item" aria-label="Read more">Dualband Router Without Voice</a>
                              
                             </div>
                         </div>
