--- a/product.html
+++ b/product.html
@@ -116,7 +116,7 @@
                         <a href="index.html" class="nav-item nav-link" aria-label="Read more">Home</a>
                         
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link active" data-bs-toggle="dropdown" aria-label="Read more">Products</a>
+                            <a href="product.html" class="nav-link active" data-bs-toggle="dropdown" aria-label="Read more">Products</a>
                             <div class="dropdown-menu bg-light mt-2">
                                  <a href="dualband.html" class="dropdown-item" aria-label="Read more">Dualband Router With Voice</a>
                                  <a href="singleband.html" class="dropdown-item" aria-label="Read more">Dualband Router Without Voice</a>
