--- a/support.html
+++ b/support.html
@@ -118,7 +118,7 @@
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link " data-bs-toggle="dropdown">Products</a>
+                            <a href="product.html" class="nav-link " data-bs-toggle="dropdown">Products</a>
                             <div class="dropdown-menu bg-light mt-2">
                                 <a href="dualband.html" class="dropdown-item" aria-label="Read more">Dualband Router With Voice</a>
                                  <a href="singleband.html" class="dropdown-item" aria-label="Read more">Dualband Router Without Voice</a>
