--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 <div class="col-md-6 col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <a href="index.html" class="d-inline-block mb-3" aria-label="Read more">
                         <div class="d-flex justify-content-center align-items-center">
-                            <p class="text-primary text-center"><img src="img/logo.png" width="200px" alt="footer-logo"></p>
+                            <p class="text-primary text-center"><img src="img/homefiber.png" width="200px" alt="footer-logo"></p>
                         </div>
                     </a>
 
