--- a/product.html
+++ b/product.html
@@ -448,7 +448,7 @@
                 <div class="col-md-6 col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <a href="index.html" class="d-inline-block mb-3">
                         <div class="d-flex justify-content-center align-items-center">
-                        <p class="text-primary text-center"><img src="img/logo.png" width="200px" alt="footer-logo"></p></div>
+                        <p class="text-primary text-center"><img src="img/homefiber.png" width="200px" alt="footer-logo"></p></div>
                     </a>
                     
                     <p class="mb-0">Home fiber Specialises in the design development and production of optical fiber based networking equipment.</p>
