--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     </p>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                    <div id="carouselExampleDark1" class="carousel carousel-dark slide" data-bs-ride="carousel1">
+                    <div id="carouselExampleDark1" class="carousel carousel-dark slide" data-bs-ride="carousel">
                        
                         <div class="carousel-inner">
                           <div class="carousel-item active" data-bs-interval="10000">
