--- a/dualband.html
+++ b/dualband.html
@@ -142,12 +142,12 @@
     <!-- Hero Start -->
     <div class="container-fluid bg-primary hero-header mb-5">
         <div class="container text-center">
-            <p class="display-4 text-white mb-3 animated slideInDown" style="font-weight: 600;">Dualband Router</p>
+            <p class="display-4 text-white mb-3 animated slideInDown" style="font-weight: 600;">Dualband Router With Voice</p>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb justify-content-center mb-0 animated slideInDown">
                     <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
                     
-                    <li class="breadcrumb-item text-white active" aria-current="page">Dualband Router</li>
+                    <li class="breadcrumb-item text-white active" aria-current="page">Dualband Router With Voice</li>
                 </ol>
             </nav>
         </div>
@@ -163,7 +163,7 @@
         <section class="mb-5">
 
             <!-- Section heading -->
-            <h3 class="text-center font-weight-bold mb-5">Dualband Router Details</h3>
+            <h3 class="text-center font-weight-bold mb-5">Dualband Router With Voice Details</h3>
 
             <div class="row mb-5">
 
