--- a/singleband.html
+++ b/singleband.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Homefiber Singleband Router Page</title>
+    <title>Dualband Router Without Voice</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Homefiber, network, Router, Telfi technologies, Dualband Router, Singleband Router" name="keywords">
-    <meta content=" Singleband Router  HF4AV4001  Upstream: 1310nm; Downstream: 1490nm SC/APC connector " name="description">
+    <meta content="Homefiber, network, Router, Telfi technologies, Dualband Router, Dualband Router Without Voice" name="keywords">
+    <meta content=" Dualband Router Without Voice  HF4AV4001  Upstream: 1310nm; Downstream: 1490nm SC/APC connector " name="description">
     <meta property="og:image" content="img/img1.png"/>
   
-    <meta property="og:title" content="Singleband Router"/>
+    <meta property="og:title" content="Dualband Router Without Voice"/>
   
     <meta property="og:description" content=" Single band router  HF4AV4001  Upstream: 1310nm; Downstream: 1490nm SC/APC connector "/>
     <!-- Favicon -->
@@ -139,12 +139,12 @@
     <!-- Hero Start -->
     <div class="container-fluid bg-primary hero-header mb-5">
         <div class="container text-center">
-            <h1 class="display-4 text-white mb-3 animated slideInDown">Singleband Router</h1>
+            <h1 class="display-4 text-white mb-3 animated slideInDown">Dualband Router Without Voice</h1>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb justify-content-center mb-0 animated slideInDown">
                     <li class="breadcrumb-item"><a class="text-white" href="#" aria-label="Read more">Home</a></li>
                     
-                    <li class="breadcrumb-item text-white active" aria-current="page">Singleband Router</li>
+                    <li class="breadcrumb-item text-white active" aria-current="page">Dualband Router Without Voice</li>
                 </ol>
             </nav>
         </div>
@@ -160,7 +160,7 @@
         <section class="mb-5">
 
             <!-- Section heading -->
-            <h3 class="text-center font-weight-bold mb-5">Singleband Router Details</h3>
+            <h3 class="text-center font-weight-bold mb-5">Dualband Router Without Voice Details</h3>
 
             <div class="row mb-5">
 
